Fix z-index

--- a/static/communism/css/main.css
+++ b/static/communism/css/main.css
@@ -75,6 +75,7 @@ input[type="checkbox"] {
     position: absolute;
     top: 5px;
     right: 5px;
+    z-index: 1;
 }
 
 tr.info > td {
